more code in javascript, still an issue pulling information from the array

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         </div>
         <!--right column(result field)-->
         <div class="column">
-            <h2 class="label">Recipe: <span id="search-term"></span></h2>
+            <h2 class="label">Recipe with: <span id="search-term"></span></h2>
             <div id="results-container" class="recipe"></div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
     </body>
 </html>
