--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Backyard Bartender</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+        <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
     <section class="section">
         <div class="container">
-        <h1 class="title">
-            Backyard Bartender!
-        </h1>
+        <h1 class="title">Backyard Bartender <i class="fas fa-cocktail"></i></h1>
         <p class="subtitle">
             Discover <strong>DIY</strong> cocktail recipes with the liquor of your choice!
         </p>
@@ -32,7 +32,8 @@
             <h2 class="label">Recipe with: <span id="search-term"></span></h2>
             <div id="results-container" class="recipe"></div>
         </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./assets/script.js"></script>
+        <script src="./assets/script.js"></script>
     </body>
 </html>
