--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </div>
         <!--right column(result field)-->
         <div class="column">
-            <h2 class="label">Recipe with: <span id="search-term"></span></h2>
-            <div id="results-container" class="recipe"></div>
+            <div class="box">
+                <h2 class="label">Recipes with: <span id="search-term"></span></h2>
+                <ol id="results-container" class="content"></ol>
+            </div>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
