--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     <section class="section">
         <div class="container">
-        <h1 class="title">Backyard Bartender <i class="fas fa-cocktail"></i></h1>
+        <h1 class="title">The Backyard Bartender <i class="fas fa-cocktail"></i></h1>
         <p class="subtitle">
             Discover <strong>DIY</strong> cocktail recipes with the liquor of your choice!
         </p>
