--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
         <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
-    <section class="section">
-        <div class="container">
-        <h1 class="title">Backyard Bartender <i class="fas fa-cocktail"></i></h1>
-        <p class="subtitle">
-            Discover <strong>DIY</strong> cocktail recipes with the liquor of your choice!
-        </p>
-        </div>
-    </section>
+        <section class="hero is-primary">
+            <div class="hero-body">
+                <p class="title">
+                Backyard Bartender! <i class="fas fa-cocktail"></i>
+                </p>
+                <p class="subtitle">
+                Discover <strong>DIY</strong> cocktail recipes with the liquor of your choice!
+                </p>
+            </div>
+        </section>
     <!--section for columns-->
     <div class="columns">
         <!--left column(search field)-->
@@ -26,6 +28,7 @@
                 <input class="input" name="liquor" id="liquor" type="text" placeholder="e.g. Vodka" />
                 <button class="button is-primary" type="submit">Generate Recipe</button>
             </form>
+            <div id = map></div>
         </div>
         <!--right column(result field)-->
         <div class="column">
@@ -33,6 +36,9 @@
             <div id="results-container" class="recipe"></div>
         </div>
 
+        <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAIwJdV3xHgNPtuuFZIUjJLMXPS7YvMPE&libraries=places&callback=initMap">
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="./assets/script.js"></script>
     </body>
