--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--section for columns-->
     <div class="columns">
         <!--left column(search field)-->
-        <div class="column">
+        <div class="column is-one-third">
             <form id="search-box" class="box">
                 <label class="label" for="liquor">Search by Liquor</label>
                 <input class="input" name="liquor" id="liquor" type="text" placeholder="e.g. Vodka" />
@@ -29,7 +29,7 @@
             <div id = map></div>
         </div>
         <!--right column(result field)-->
-        <div class="column">
+        <div class="column is-two-thirds">
             <div class="box">
                 <h2 class="label">Recipes with: <span id="search-term"></span></h2>
                 <ol id="results-container" class="content"></ol>
