fixed html mix up

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
-    <section class="section">
-        <div class="container">
-        <h1 class="title">The Backyard Bartender <i class="fas fa-cocktail"></i></h1>
+    <section class="hero is-primary">
+        <div class="hero-body">
+        <p class="title">
+            The Backyard Bartender<i class="fas fa-cocktail"></i>
+        </p>
         <p class="subtitle">
             Discover <strong>DIY</strong> cocktail recipes with the liquor of your choice!
         </p>
